<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Sudoku</string>
   <string name="main_title">Classic Sudoku</string>
   <string name="continue_label">Continue</string>
   <string name="new_game_label">New Game</string>
   <string name="about_label">About</string>
   <string name="exit_label">Exit</string>
   <string name="pls_input_name">please input file name</string>
   <string name="save_puzzle_success">save puzzle success</string>
   <string name="save_puzzle_failure">save puzzle failure</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>
   <string name="difficulty_title">Difficulty Setting</string>
   <string name="difficulty_dlg_title">Choose a difficulty</string>
   <string name="difficulty_key">difficulty</string>
   <string name="save_name_view_Title">Save Game</string>
   <string name="save_name_view_label">please input the name:</string>
   <string name="save_name_ok">OK</string>
   <string name="save_name_cancel">Cancel</string>
   <string name="load_game_success">load game success</string>
   <string name="no_saved_puzzle">no saved puzzle, pls return!</string>
   
   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="normal_label">normal</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>
   <string name="very_hard_label">V.Hard</string>
   <string name="diff_sum_prefix">The current game difficulty is</string>
   <string name="game_undo">Undo</string>
   <string name="game_redo">Redo</string>
   <string name="game_save">Save</string>
   <string name="game_load">Load</string>
   <string name="no_undo">nomore undo</string>
   <string name="no_redo">nomore redo</string>
   <string name="game_title">Game</string>
   <string name="no_moves_label">No moves</string>
   <string name="keypad_title">Pls select</string>
   <string name="menu_head_title">Select Action</string>
   <string name="menu_cancel">Cancel</string>
   
   <string name="about_title">About classic Sudoku</string>
   <string name="about_text">\
This is a classic sudoku game which a sudoku cant missed, the features are:\n
1. including thousands of sudoku puzzles with 5 difficulty level.\n
2. smart hint, use different color to give suggestions.\n
3. convenient operation, support undo and redo, support save and load puzzle result,
   including the difficulty and time used!\n
4. new features will be added. Any suggestion, please contact feitian124@yunnuy.com.\n\n
Brief introduction of sudoku:\n
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.
</string>
</resources>
