<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
  
  <com.yunnuy.sudoku.PuzzleView android:id="@+id/play"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1" />
		
  <LinearLayout
  android:background="@color/puzzle_info_bg"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
	<Button android:id="@+id/load_btn"  
		android:text="@string/game_load"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<Button android:id="@+id/save_btn"
		android:text="@string/game_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<Button android:id="@+id/undo_btn"
		android:text="@string/game_undo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<Button android:id="@+id/redo_btn"
		android:text="@string/game_redo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<TextView android:id="@+id/game_info" 
		android:text="@string/medium_label"
		android:layout_marginLeft="5dp"
		android:textColor="@color/text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<Chronometer android:id="@+id/chronometer"
		android:gravity="right"
       	android:textColor="@color/text"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
